use a template for front end

--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -14,6 +14,12 @@ h2 {
 .headerbuttons{
     text-align: right;
 }
+.resume {
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
 h4 {
     color: rebeccapurple;
     margin:0;
