--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -2,7 +2,7 @@
     background-blend-mode: color;
     width: 100%;
     height: 100%;
-    background: #0B0C10;
+    background: #121212;
     position: absolute;
     top: 0;
     left: 0;
@@ -10,5 +10,8 @@
   }
 
 .about{
-    background-color: #0B0C10;
+    background-color:#121212;
+}
+.spotify-btn{
+  
 }
