--- a/react-ui/public/css/layout.css
+++ b/react-ui/public/css/layout.css
@@ -87,6 +87,7 @@ header .social {
    padding: 0;
    font-size: 30px;
 }
+
 header .social li {
    display: inline-block;
    margin: 0 15px;
@@ -904,8 +905,8 @@ footer .social-links li:first-child { margin-left: 0; }
 .social .btn i{
    margin-right: 15px;
 }
-.project-btn{
-   background-color: #BB86FC !important;
+.spotify-btn{
+   background-color: #1DB954 !important;
 }
 .github-btn{
    background-color: #34495e !important;
