--- a/react-ui/public/css/layout.css
+++ b/react-ui/public/css/layout.css
@@ -35,7 +35,7 @@ header {
    text-align: center;
    overflow: hidden;
 }
-
+g
 /* vertically center banner section */
 header:before {
    content: '';
