--- a/react-ui/public/css/layout.css
+++ b/react-ui/public/css/layout.css
@@ -205,14 +205,16 @@ ul#nav li.current a { color: #BB86FC; }
 }
 #about .profile-pic {
    position: relative;
-   width: 120px;
-   height: 120px;
+   right: 75px;
+   width: 225px;
+   height: 225px;
    border-radius: 100%;
+
 }
 #about .contact-details { width: 41.66667%; }
 #about .download {
    width: 58.33333%;
-   padding-top: 6px;
+   padding-top: 35px;
 }
 #about .main-col { padding-right: 5%; }
 #about .download .button {
