--- a/react-ui/public/css/layout.css
+++ b/react-ui/public/css/layout.css
@@ -21,6 +21,18 @@
 /* a. General Styles
 /* ------------------------------------------------------------------ */
 
+/* particles */
+.canvas { 
+   background-blend-mode: color;
+   width: 100%;
+   height: 100%;
+   background: #191919;
+   position: absolute;
+   top: 0;
+   left: 0;
+   z-index: -1;
+ }
+
 body { background: #121212; }
 
 /* ------------------------------------------------------------------ */
